[package]
name = "rustredis"
version = "0.1.0"
edition = "2021"

description = "A Redis performance testing tool written in Rust"
homepage = "https://github.com/threelight/rustredis"
repository = "https://github.com/threelight/rustredis"
license = "MIT"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
redis = "0.24"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
lazy_static = "1.4"
jsonschema = "0.16"
sysinfo = "0.30"
